--- a/reinaldo_zapata-cv-complete-(sp).tex
+++ b/reinaldo_zapata-cv-complete-(sp).tex
@@ -53,12 +53,19 @@
 
 \section{Experiencia Laboral}
 \begin{tabular}{R{4cm}|p{11cm}}
+\textsc{Ago. 2016 --  }	&	Docenete \\
+						&	\href{http://www.leon.uia.mx}{Universidad Iberoamericana Le\'on}; Le\'on, Guanajuato, Mex.\\
+						&	\footnotesize{Materias asignadas: }\\
+						&\footnotesize{\qquad F\'isica II: movimiento rotacional, cuerpo r\'igido, relatividad y ondas; laboratorio. }\\
+						&\footnotesize{\qquad Electricidad y Magnetismo : electrost\'atica, electrodin\'amica (corriente directa y alterna), circuitos RC y RLC, Leyes de Maxwell; laboratorio. }\\
+						\multicolumn{2}{c}{} \\
 \textsc{Ago. 2010 --}	&	Becario -- Investigaci\'on \\
 						&	\href{http://www.cio.mx/}{Centro de Investigaciones en \'Optica A.C.}; Le\'on, Guanajuato, Mex.\\
 						&	\footnotesize{C\'alculo de propiedades \'opticas de materiales nanoestructurados: grafeno hydrogenado y nanotubos de nitruro de boro.}\\
 						&	\footnotesize{Publicaci€on del art\'iculo \emph{\href{http://onlinelibrary.wiley.com/doi/10.1002/pssb.201670511/abstract}{Nonlinear optical responses in hydrogenated graphene structures}} en la revista \href{http://onlinelibrary.wiley.com/journal/10.1002/(ISSN)1521-3951}{\emph{Physca of Status Solidi (b)}}. Debido a la importancia del art\'iculo fue otorgada una de las portadas: \href{http://onlinelibrary.wiley.com/doi/10.1002/pssb.201670511/epdf}{ISSN 0370-1972Phys. Status Solidi B253 · No. 2 February189–408 (2016)}.} \\
 						&	\footnotesize{Ayudant\'ias a nivel maestr\'ia en las materias de Mec\'anica Cu\'antica y Electromagnetismo, dando clase y dise\~nando y aplicando ex\'amenes. Ayudant\'ia en la cuarta edición del evento \emph{J\'ovenes con Excelencia}: tutoría de 4 alumnos}\\
 						&	\footnotesize{Participaci\'on en el congreso \href{http://www.osiconference.org/osi2015/index.php}{OSI 11 (\emph{The International Conference on Optics of Surfaces and Interfaces})} con el p\'oster \emph{Optical Spin- and Current Injection and Second Harmonic Generation in Hydrogenated Graphene Structures}.}\\
+						&	\footnotesize{Participaci\'on en el congreso \href{http://riaooptilas.cefop.cl/en/}{RIAO/OPTILAS (\emph{IX Iberoamerican Meeting on Optics and XII Iberoamerican Meeting on Optics, Lasers and Applications})} con el p\'oster \emph{Nonlinear optical responses in hydrogenated graphene structures}.}\\
 						\multicolumn{2}{c}{} \\
 \textsc{Ago. 2012 -- Jul. 2016 }	&	Docenete \\
 						&	\href{http://www.institutojassa.edu.mx/}{Instituto Jass\'a}; Le\'on, Guanajuato, Mex.\\
@@ -70,6 +77,7 @@
 							\multicolumn{2}{c}{} \\
 \end{tabular}
 
+\newpage
 \section{Formaci\'on Acad\'emica}
 \begin{tabular}{R{4cm}|p{11cm}}
 					&	Doctorado en Ciencias (\'Optica) \\
@@ -88,7 +96,6 @@
 					\multicolumn{2}{c}{} \\
 \end{tabular}
 
-\newpage
 \section{\textsc{Habilidades}}
 	\begin{tabular}{R{4cm} p{10cm}}
 		Experto:	&	Hardware computacional, \LaTeX, OS X (mac), Linux, Windows, Paquetería Office y Libre Office\\ 
