--- a/reinaldo_zapata-cv-complete-(sp).tex
+++ b/reinaldo_zapata-cv-complete-(sp).tex
@@ -46,65 +46,79 @@
 \textsc{Lugar y fecha de }	&	\\
 \textsc{nacimieto:}			&	Le\'on, Guanajuato, Mex. |  2 de enero de 1984 \\
 \textsc{Direcci\'on:}		&	Plaza Sn. Francisco 209, Haciendas el Rosario 37125, \\
-							& 	Le\'on, Guanajuato, Mexico \\
-\textsc{Celular:}			&	+52 (477) 670 0687\\
+							& 	Le\'on, Guanajuato, M\'exico \\
+\textsc{Celular:}			&	+521 (477) 670 0687\\
 \textsc{email:}				&	\href{mailto:reinaldo.zapata.p@gmail.com}{reinaldo.zapata.p@gmail.com}
 \end{tabular}
 
 \section{Experiencia Laboral}
 \begin{tabular}{R{4cm}|p{11cm}}
 \textsc{Ago. 2016 --  }	&	Docenete \\
+						&	\href{http://www.unitec.mx/campus-leon/x}{UNITEC campus Le\'on}; Le\'on, Guanajuato, Mex.\\
+						&	\footnotesize{Materias asignadas: }\\
+						&\footnotesize{\qquad C\'alculo diferencial. }\\
+						&\footnotesize{\qquad Cinem\'atica y din\'amica. }\\
+						\multicolumn{2}{c}{} \\
+\textsc{Ago. 2016 --  }	&	Docenete \\
 						&	\href{http://www.leon.uia.mx}{Universidad Iberoamericana Le\'on}; Le\'on, Guanajuato, Mex.\\
 						&	\footnotesize{Materias asignadas: }\\
 						&\footnotesize{\qquad F\'isica II: movimiento rotacional, cuerpo r\'igido, relatividad y ondas; laboratorio. }\\
 						&\footnotesize{\qquad Electricidad y Magnetismo : electrost\'atica, electrodin\'amica (corriente directa y alterna), circuitos RC y RLC, Leyes de Maxwell; laboratorio. }\\
-						\multicolumn{2}{c}{} \\
+						\multicolumn{2}{c}{} \\						
 \textsc{Ago. 2010 --}	&	Becario -- Investigaci\'on \\
 						&	\href{http://www.cio.mx/}{Centro de Investigaciones en \'Optica A.C.}; Le\'on, Guanajuato, Mex.\\
 						&	\footnotesize{C\'alculo de propiedades \'opticas de materiales nanoestructurados: grafeno hydrogenado y nanotubos de nitruro de boro.}\\
-						&	\footnotesize{Publicaci€on del art\'iculo \emph{\href{http://onlinelibrary.wiley.com/doi/10.1002/pssb.201670511/abstract}{Nonlinear optical responses in hydrogenated graphene structures}} en la revista \href{http://onlinelibrary.wiley.com/journal/10.1002/(ISSN)1521-3951}{\emph{Physca of Status Solidi (b)}}. Debido a la importancia del art\'iculo fue otorgada una de las portadas: \href{http://onlinelibrary.wiley.com/doi/10.1002/pssb.201670511/epdf}{ISSN 0370-1972Phys. Status Solidi B253 · No. 2 February189–408 (2016)}.} \\
-						&	\footnotesize{Ayudant\'ias a nivel maestr\'ia en las materias de Mec\'anica Cu\'antica y Electromagnetismo, dando clase y dise\~nando y aplicando ex\'amenes. Ayudant\'ia en la cuarta edición del evento \emph{J\'ovenes con Excelencia}: tutoría de 4 alumnos}\\
-						&	\footnotesize{Participaci\'on en el congreso \href{http://www.osiconference.org/osi2015/index.php}{OSI 11 (\emph{The International Conference on Optics of Surfaces and Interfaces})} con el p\'oster \emph{Optical Spin- and Current Injection and Second Harmonic Generation in Hydrogenated Graphene Structures}.}\\
-						&	\footnotesize{Participaci\'on en el congreso \href{http://riaooptilas.cefop.cl/en/}{RIAO/OPTILAS (\emph{IX Iberoamerican Meeting on Optics and XII Iberoamerican Meeting on Optics, Lasers and Applications})} con el p\'oster \emph{Nonlinear optical responses in hydrogenated graphene structures}.}\\
+						&	\footnotesize{Participaci\'on en el congreso \href{http://riaooptilas.cefop.cl/en/}{RIAO/OPTILAS (\emph{IX Iberoamerican Meeting on Optics and XII Iberoamerican Meeting on Optics, Lasers and Applications})} con el p\'oster \emph{Nonlinear Optical Responses in Hydrogenated Graphene Structures}.}\\
+						&	\footnotesize{Ayudant\'ias a nivel maestr\'ia en las materias de Mec\'anica Cu\'antica y Electromagnetismo, dando clase y dise\~nando y aplicando ex\'amenes. Ayudant\'ia en la cuarta edición del evento \emph{J\'ovenes con Excelencia}: tutor\'ia de 4 alumnos}\\
+						&	\footnotesize{Publicaci\'on del art\'iculo \emph{\href{http://onlinelibrary.wiley.com/doi/10.1002/pssb.201670511/abstract}{Nonlinear Optical Responses in Hydrogenated Graphene Structures}} en la revista \href{http://onlinelibrary.wiley.com/journal/10.1002/(ISSN)1521-3951}{\emph{Physca of Status Solidi (b)}}. Debido a la importancia del art\'iculo fue otorgada una de las portadas: \href{http://onlinelibrary.wiley.com/doi/10.1002/pssb.201670511/epdf}{ISSN 0370-1972Phys. Status Solidi B253 · No. 2 February189–408 (2016)}.} \\
+						&	\footnotesize{Participaci\'on en el congreso \href{http://www.osiconference.org/osi2015/index.php}{OSI 11 (\emph{The International Conference on Optics of Surfaces and Interfaces})} con el p\'oster \emph{Optical Spin and Current Injection and Second Harmonic Generation in Hydrogenated Graphene Structures}.}\\
+						&	\footnotesize{Trabajo en laboratorio:}\\
+						&	\footnotesize{\qquad Holograf\'ia anal\'ogica y digital}\\
+						&	\footnotesize{\qquad Espectroscop\'ia}\\
+						&	\footnotesize{\qquad Fabricaci\'on de componentes \'opticos}\\
+						&	\footnotesize{\qquad Fibras \'opticas y aplicaciones}\\
+						&	\footnotesize{\qquad Interferometr\'ia y pruebas \'opticas}\\
 						\multicolumn{2}{c}{} \\
 \textsc{Ago. 2012 -- Jul. 2016 }	&	Docenete \\
 						&	\href{http://www.institutojassa.edu.mx/}{Instituto Jass\'a}; Le\'on, Guanajuato, Mex.\\
-						&	\footnotesize{Profesor de Matem\'aticas y F\'isica a nivel secundaria y bachilleratrespectivamente.}\\
+						&	\footnotesize{Profesor de Matem\'aticas y F\'isica a nivel secundaria y bachillerato, respectivamente. }\\
 						\multicolumn{2}{c}{} \\
-\textsc{Abr. 2007 -- 2009}	&	Customer Care Representative\\
-							&	\href{http://www.teletech.com/worldwide/spanish}{Teletech}; Le\'on, Guanajuato, Mex.\\
-							&	\footnotesize{Representante de atenci\'on a clientes para la campa\~na biling\"ue \emph{Sprint together with Nextel}.}\\
-							\multicolumn{2}{c}{} \\
+% \textsc{Abr. 2007 -- 2009}	&	Customer Care Representative\\
+% 						&	\href{http://www.teletech.com/worldwide/spanish}{Teletech}; Le\'on, Guanajuato, Mex.\\
+% 						&	\footnotesize{Representante de atenci\'on a clientes para la campa\~na biling\"ue \emph{Sprint together with Nextel}.}\\
+% 							\multicolumn{2}{c}{} \\
 \end{tabular}
 
 \newpage
 \section{Formaci\'on Acad\'emica}
 \begin{tabular}{R{4cm}|p{11cm}}
-					&	Doctorado en Ciencias (\'Optica) \\
-					&	\href{http://www.cio.mx/}{Centro de Investigaciones en \'Optica A. C.}; Le\'on, Guanajuato, Mex.\\
-					&	Estudios en curso.\\
+\textsc{Mar. 2017 }	&	Doctorado en Ciencias (\'Optica) \\
+						&	\href{http://www.cio.mx/}{Centro de Investigaciones en \'Optica A. C.}; Le\'on, Guanajuato, Mex.\\
+						&	Estudios en curso, casi concluidos.\\
 					\multicolumn{2}{c}{} \\
 
 \textsc{Dic. 2012 }	&	Maestr\'ia en Ciencias (\'Optica) \\
-					&	\href{http://www.cio.mx/}{Centro de Investigaciones en \'Optica A. C.}; Le\'on, Guanajuato, Mex.\\
-					&	Tesis: Optical Spin Injection in Graphane\\
+						&	\href{http://www.cio.mx/}{Centro de Investigaciones en \'Optica A. C.}; Le\'on, Guanajuato, Mex.\\
+						&	Tesis: Optical Spin Injection in Graphane\\
+						&	No. de C\'edula profesional: 00000814\\
 					\multicolumn{2}{c}{} \\
 
 \textsc{Ago. 2010 }	&	Lic. en F\'isica \\
-					&	\href{https://fisica.ugto.mx}{Divisi\'on de Ciencias e Ingenier\'ias}, \href{http://www.ugto.mx}{Universidad de Guanajuato}\\
-					&	Tesis: Interfer\'ometro Heterodino de Dos Haces Gaussianos para Perfilometr\'ia. Obtenci\'on del grado menci\'on laureada.\\
+						&	\href{https://fisica.ugto.mx}{Divisi\'on de Ciencias e Ingenier\'ias}, \href{http://www.ugto.mx}{Universidad de Guanajuato}\\
+						&	Tesis: Interfer\'ometro Heterodino de Dos Haces Gaussianos para Perfilometr\'ia. Obtenci\'on del grado menci\'on laureada.\\
+						&	No. de C\'edula profesional: 00000813\\
 					\multicolumn{2}{c}{} \\
 \end{tabular}
 
 \section{\textsc{Habilidades}}
 	\begin{tabular}{R{4cm} p{10cm}}
-		Experto:	&	Hardware computacional, \LaTeX, OS X (mac), Linux, Windows, Paquetería Office y Libre Office\\ 
+		Experto:	&	Hardware computacional, \LaTeX, OS X (mac), Linux, Windows, Paqueter\'ia Office y Libre Office\\ 
 		Intermedio:	&	Fortran, OpenMP, MPI, Android, iOS\\
 	\end{tabular}
 
 \section{Idiomas}
 	\begin{tabular}{R{4cm}l}
-		\textsc{Ingl\'es}:	&	100\% lectura, 80\% escritura, 80\% conversación \\
+		\textsc{Ingl\'es}:	&	100\% lectura, 80\% escritura, 80\% conversaci\'on \\
 		\textsc{Espa\~nol}:	&	Lengua nativa \\
 	\end{tabular}
 
@@ -120,6 +134,7 @@
 \begin{textblock}{1}(0,-9.5)
 \rotatebox{90}{\parbox{500mm}{\color{black}\sffamily \'Ultima actualizaci\'on: \today.}}
 \end{textblock}
+
 
 \end{document}
 
