--- a/reinaldo_zapata-cv-complete-en.tex
+++ b/reinaldo_zapata-cv-complete-en.tex
@@ -4,7 +4,6 @@
 \usepackage[usenames,dvipsnames]{xcolor}
 \usepackage{parskip}
 \usepackage[absolute]{textpos}
-\usepackage[spanish]{babel}
 
 \usepackage{array}
 \newcolumntype{L}[1]{>{\raggedright\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
@@ -33,7 +32,7 @@
 
 % Watermark
 \begin{textblock}{1}(0,-9.5)
-\rotatebox{90}{\parbox{500mm}{\color{black}\sffamily \'Ultima actualizaci\'on: \today.}}
+\rotatebox{90}{\parbox{500mm}{\color{black}\sffamily Last update: \today.}}
 \end{textblock}
 
 \begin{center}
@@ -44,27 +43,27 @@
 \section{Personal Information}
 \begin{tabular}{R{4cm}l}
 \textsc{Place and date of}  &   \\
-\textsc{birth:}             &   Le\'on, Guanajuato, Mex. |  January 2, 1984 \\
+\textsc{birth:}             &   Le\'on, Guanajuato, M\'ex. |  January 2, 1984 \\
 \textsc{Address:}           &   Plaza Sn. Francisco 209, Haciendas el Rosario 37125, \\
                             &   Le\'on, Guanajuato, M\'exico \\
-\textsc{Cell phone number:} &   +521 (477) 670 0687\\
+\textsc{Cell phone number:} &   +52 1 (477) 670 0687\\
 \textsc{email:}             &   \href{mailto:reinaldo.zapata.p@gmail.com}{reinaldo.zapata.p@gmail.com}
 \end{tabular}
 
 \section{Work Experience}
 \begin{tabular}{R{4cm}|p{11cm}}
 \textsc{Aug. 2016 --  } &   Teacher \\
-                        &   \href{http://www.leon.uia.mx}{Universidad Iberoamericana Le\'on}; Le\'on, Guanajuato, Mex.\\
+                        &   \href{http://www.leon.uia.mx}{Universidad Iberoamericana Le\'on}; Le\'on, Guanajuato, M\'ex.\\
                         &   \footnotesize{Assigned subjects: }\\
                         &\footnotesize{\qquad Physics: rotational movement,  relativity and waves; laboratory. }\\
                         &\footnotesize{\qquad Electricity and Magnetism : electrostatics, electrodynamics (direct and alternating current), RC and RLC circuits, Maxwell's Laws; laboratory. }\\
                         \multicolumn{2}{c}{} \\
-\textsc{Aug. 2010 --}   &   Researcher \\
-                        &   \href{http://www.cio.mx/}{Centro de Investigaciones en \'Optica A.C.}; Le\'on, Guanajuato, Mex.\\
+\textsc{Aug. 2010 --}   &   Researcher -- student\\
+                        &   \href{http://www.cio.mx/}{Centro de Investigaciones en \'Optica A.C.}; Le\'on, Guanajuato, M\'ex.\\
                         &   \footnotesize{Calculation of optical properties of nanostructured materials: hydrogenated graphene and boron-nitride nanotubes.}\\
                         &   \footnotesize{Participation in the congress \href{http://riaooptilas.cefop.cl/en/}{RIAO/OPTILAS (IX Iberoamerican Meeting on Optics and XII Iberoamerican Meeting on Optics, Lasers and Applications)} with the poster Nonlinear Optical Responses in Hydrogenated Graphene Structures.}\\
-                        &   \footnotesize{Assistant teacher at master degree in Quantum Mechanics and Electromagnetism: teaching, exams designing. Assistant in the 4th edition of \emph{J\'ovenes con Excelencia}: mentor of four students.}\\
-                        &   \footnotesize{Publication of the article \emph{\href{http://onlinelibrary.wiley.com/doi/10.1002/pssb.201670511/abstract}{Nonlinear Optical Responses in Hydrogenated Graphene Structures}} in the german journal \href{http://onlinelibrary.wiley.com/journal/10.1002/(ISSN)1521-3951}{\emph{Physca of Status Solidi (b)}}. Due to the relevance of the research we obtained the journal back cover: \href{http://onlinelibrary.wiley.com/doi/10.1002/pssb.201670511/epdf}{ISSN 0370-1972Phys. Status Solidi B253 · No. 2 February189–408 (2016)}.} \\
+                        &   \footnotesize{Assistant teacher for master's students in Quantum Mechanics and Electromagnetism: teaching and exams designing. Assistant in the 4th edition of \emph{J\'ovenes con Excelencia}: mentor of four students.}\\
+                        &   \footnotesize{Publication of the article \emph{\href{http://onlinelibrary.wiley.com/doi/10.1002/pssb.201670511/abstract}{Nonlinear Optical Responses in Hydrogenated Graphene Structures}} in the german journal \href{http://onlinelibrary.wiley.com/journal/10.1002/(ISSN)1521-3951}{\emph{Physca of Status Solidi (b)}}. Due to the relevance of the research we obtained the journal back cover: \href{http://onlinelibrary.wiley.com/doi/10.1002/pssb.201670511/epdf}{ISSN 0370-1972Phys. Status Solidi B253 · No. 2 February 189–408 (2016)}.} \\
                         &   \footnotesize{Participation in the congress \href{http://www.osiconference.org/osi2015/index.php}{OSI 11 (\emph{The International Conference on Optics of Surfaces and Interfaces})} with the poster \emph{Optical Spin and Current Injection and Second Harmonic Generation in Hydrogenated Graphene Structures}.}\\
                         &   \footnotesize{Lab experience:}\\
                         &   \footnotesize{\qquad Analogical and digital holography}\\
@@ -74,57 +73,56 @@
                         &   \footnotesize{\qquad Interferometry and optical tests}\\
                         \multicolumn{2}{c}{} \\
 \textsc{Aug. 2012 -- Jul. 2016 }    &   Teacher \\
-                        &   \href{http://www.institutojassa.edu.mx/}{Instituto Jass\'a}; Le\'on, Guanajuato, Mex.\\
-                        &   \footnotesize{Maths and physics teacher in highschool. }\\
+                        &   \href{http://www.institutojassa.edu.mx/}{Instituto Jass\'a}; Le\'on, Guanajuato, M\'ex.\\
+                        &   \footnotesize{Maths and physics teacher for high school students. }\\
                         \multicolumn{2}{c}{} \\
-\textsc{Abr. 2007 -- 2009}  &   Customer Care Representative\\
-                        &   \href{http://www.teletech.com/worldwide/spanish}{Teletech}; Le\'on, Guanajuato, Mex.\\
-                        &   \footnotesize{Customer care representative in the campaign Sprint together with Nextel.}\\
+\textsc{Apr. 2007 -- 2009}  &   Customer Care Representative\\
+                        &   \href{http://www.teletech.com/worldwide/spanish}{Teletech}; Le\'on, Guanajuato, M\'ex.\\
+                        &   \footnotesize{Customer care representative for the project Sprint together with Nextel.}\\
                             \multicolumn{2}{c}{} \\
 \end{tabular}
 
 \newpage
-\section{Formaci\'on Acad\'emica}
+\section{Education}
 \begin{tabular}{R{4cm}|p{11cm}}
-\textsc{Mar. 2017 } &   Doctorado en Ciencias (\'Optica) \\
-                        &   \href{http://www.cio.mx/}{Centro de Investigaciones en \'Optica A. C.}; Le\'on, Guanajuato, Mex.\\
-                        &   Estudios en curso, casi concluidos.\\
+\textsc{Mar. 2017 } &   Science doctorate (Optics) \\
+                        &   \href{http://www.cio.mx/}{Centro de Investigaciones en \'Optica A. C.}; Le\'on, Guanajuato, M\'ex.\\
+                        &   Studies almost concluded.\\
                     \multicolumn{2}{c}{} \\
 
-\textsc{Dic. 2012 } &   Maestr\'ia en Ciencias (\'Optica) \\
-                        &   \href{http://www.cio.mx/}{Centro de Investigaciones en \'Optica A. C.}; Le\'on, Guanajuato, Mex.\\
-                        &   Tesis: Optical Spin Injection in Graphane\\
+\textsc{Dec. 2012 } &   Master in Science (Optics) \\
+                        &   \href{http://www.cio.mx/}{Centro de Investigaciones en \'Optica A. C.}; Le\'on, Guanajuato, M\'ex.\\
+                        &   Thesis: Optical Spin Injection in Graphane structures.\\
                     \multicolumn{2}{c}{} \\
 
-\textsc{Aug. 2010 } &   Lic. en F\'isica \\
+\textsc{Aug. 2010 } &   Physics degree \\
                         &   \href{https://fisica.ugto.mx}{Divisi\'on de Ciencias e Ingenier\'ias}, \href{http://www.ugto.mx}{Universidad de Guanajuato}\\
-                        &   Tesis: Interfer\'ometro Heterodino de Dos Haces Gaussianos para Perfilometr\'ia. Obtenci\'on del grado menci\'on laureada.\\
+                        &   Thesis: Heterodine Interferometer of Two Gaussian Beams for Perfilometry. Degree obtained with laureate mention.\\
                     \multicolumn{2}{c}{} \\
 \end{tabular}
 
-\section{\textsc{Habilidades}}
+\section{\textsc{Skills}}
     \begin{tabular}{R{4cm} p{10cm}}
-        Experto:    &   Hardware computacional, \LaTeX, OS X (mac), Linux, Windows, Paquetería Office y Libre Office\\ 
-        Intermedio: &   Fortran, OpenMP, MPI, Android, iOS\\
+        Expert:    &   PC Hardware, \LaTeX, macOS, Linux, Windows, Microsoft Office, and FreeOffice.\\ 
+        Intermediate: &   Fortran, OpenMP, MPI, Android, and iOS.\\
     \end{tabular}
 
-\section{Idiomas}
+\section{Languages}
     \begin{tabular}{R{4cm}l}
-        \textsc{Ingl\'es}:  &   100\% lectura, 80\% escritura, 80\% conversación \\
-        \textsc{Espa\~nol}: &   Lengua nativa \\
+        \textsc{English}:  &   90\% reading, 80\% writing, 80\% speaking. \\
+        \textsc{Spanish}: &   First language. \\
     \end{tabular}
 
-\section{Intereses y Actividades}
-    \begin{tabular}{l|l}
-        Ciencia y tecnolog\'ia          &   Lectura\\
-        Software Libre                  &   M\'usica\\
-        Investigaci\'on cient\'ifica    &   Cocina  \\
-        C\'omputo de alto desempe\~no   &   Arte\\
-        Computaci\'on                   &   Deporte\\                                                   
+\section{Interests and activities}
+    \begin{tabular}{ll}
+        Science and technology          & Reading \\
+        Free Software                   & Music \\
+        Scientific research             & Arts  \\
+        Computing                       & Sports \\
     \end{tabular}
 
 \begin{textblock}{1}(0,-9.5)
-\rotatebox{90}{\parbox{500mm}{\color{black}\sffamily \'Ultima actualizaci\'on: \today.}}
+\rotatebox{90}{\parbox{500mm}{\color{black}\sffamily Last update: \today.}}
 \end{textblock}
 
 \end{document}
