--- a/reinaldo_zapata-cv-complete-sp.tex
+++ b/reinaldo_zapata-cv-complete-sp.tex
@@ -112,7 +112,7 @@
 
 \section{\textsc{Habilidades}}
 	\begin{tabular}{R{4cm} p{10cm}}
-		Experto:	&	Hardware computacional, \LaTeX, OS X (mac), Linux, Windows, Paqueter\'ia Office y Libre Office\\ 
+		Experto:	&	Hardware computacional, \LaTeX, macOS, Linux, Windows, Paqueter\'ia Office y Libre Office\\ 
 		Intermedio:	&	Fortran, OpenMP, MPI, Android, iOS\\
 	\end{tabular}
 
@@ -123,12 +123,12 @@
 	\end{tabular}
 
 \section{Intereses y Actividades}
-	\begin{tabular}{l|l}
-		Ciencia y tecnolog\'ia 			&	Lectura\\
-		Software Libre					&	M\'usica\\
-		Investigaci\'on cient\'ifica	&	Cocina  \\
-		C\'omputo de alto desempe\~no	&	Arte\\
-		Computaci\'on					&	Deporte\\													
+	\begin{tabular}{ll}
+		Ciencia y tecnolog\'ia 			& \qquad \qquad	Lectura\\
+		Software Libre					& \qquad \qquad	M\'usica\\
+		Investigaci\'on cient\'ifica	& \qquad \qquad	Cocina  \\
+		C\'omputo de alto desempe\~no	& \qquad \qquad	Arte\\
+		Computaci\'on					& \qquad \qquad	Deporte\\													
 	\end{tabular}
 
 \begin{textblock}{1}(0,-9.5)
